<resources xmlns:tools="http://schemas.android.com/tools"
           xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">Tilt</string>
    <string name="action_settings">Settings</string>

    <string name="screenname">Screen Name</string>
    <string name="stats_title">Your Tilt Stats</string>
    <string name="highest_level">Highest level</string>
    <string name="games_played">Games played</string>
    <string name="home_subtitle">an android experiment</string>
    <string name="home_explanation">Guide the ball into the portal\nas quickly as you can</string>
    <string name="connection_title">Please choose\na connection mode</string>
    <string name="connection_search">Searching players&#8230;</string>
    <string name="ready">Ready</string>
    <string name="new_record">New Record!</string>
    <string name="done">Done!</string>
    <string name="lose1">Womp,\nwomp.</string>
    <string name="lose2">So close!</string>
    <string name="lose3">Maybe\nnext time!</string>
    <string name="lose4">Ah,\nsnap!</string>
    <string name="lose5">Ah,\nbummer!</string>
    <string name="play_again">Play again</string>
    <string name="to_first_level">To the first level?</string>
    <string name="yay">Yay!</string>
    <string name="you_won">You won.</string>

    <!-- Button texts -->
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="restart">Restart</string>
    <string name="multi_player">Multi</string>
    <string name="single_player">Single</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="go">Go</string>
    <string name="version">version: <xliff:g example="1.0" id="version">%s</xliff:g></string>
    <string name="gravity">Gravity</string>
    <string name="ball_density">Ball weight:
        <xliff:g example="1.0" id="density">%.2f</xliff:g>
    </string>
    <string name="gravity_factor">Gravity:
        <xliff:g example="1.0" id="gravity">%.2f</xliff:g>
    </string>
    <string name="wall_elasticity">Wall elasticity:
        <xliff:g example="1.0" id="wall_elasticity">%.2f</xliff:g>
    </string>
    <string name="button_calibration">Start calibration</string>
    <string name="calibrate">Calibrate</string>
    <string name="sound_on">Sound ON</string>
    <string name="sound_off">Sound OFF</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices&#8230;</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="connection_state_connecting">connecting&#8230;</string>
    <string name="connection_state_connected">connected to
        <xliff:g id="device_name">%1$s</xliff:g>
    </string>
    <string name="connection_state_disconnected">not connected</string>
    <string name="connection_state_listening">listening&#8230;</string>
    <string name="select_client_server_title">Start a new game,\nor join an existing game?</string>
    <string name="start_new_game">Host</string>
    <string name="join_existing_game">Join</string>

    <string name="no_bluetooth_message">No Bluetooth is available on this device</string>
    <string name="no_bluetooth_title">NO BLUETOOTH</string>
    <string name="btn_ok">OK</string>
    <string name="calibration_title">Hold your device steady\nwhile calibrating.</string>
    <string name="calibration_subtitle">For best results place your\ndevice on a flat surface
    </string>
    <string name="calibration_countdown">Starting calibration in<xliff:g example="3" id="countdown">
        %d</xliff:g>\n
    </string>
    <string name="calibration_running">Calibrating&#8230;<xliff:g example="3" id="countdown">
        %d</xliff:g>\n
    </string>

    <string name="tutorial_1a">Try to get the ball</string>
    <string name="tutorial_1b">into the portal</string>
    <string name="tutorial_2a">The ball will drop of screen</string>
    <string name="tutorial_2b">edges without a wall</string>
    <string name="tutorial_3">When the time is out you lose</string>
    <string name="your_record">Your record:</string>
    <string name="waiting_for_players">Waiting for players&#8230;</string>
    <string name="tutorial">Tutorial</string>
    <string name="level_name">Level
        <xliff:g example="3" id="levelid">%d</xliff:g>
    </string>
    <string name="round_name">Round
        <xliff:g example="3" id="levelid">%d</xliff:g>
    </string>
    <string name="connection_lost">Connection Lost</string>
    <string name="waiting_for_server">Waiting for server&#8230;</string>
    <string name="waiting_to_start_game">Waiting for game start&#8230;</string>
    <string name="waiting_for_game_restart">Or wait for game to restart&#8230;</string>
    <string name="waiting_to_start_round">Waiting for next round&#8230;</string>
    <string name="result_time">
        <xliff:g example="1.2" id="time">%.1f</xliff:g>
    </string>
    <string name="connect_failed">Failed to connect to
        <xliff:g example="Nexus 6" id="device">%s</xliff:g>
    </string>
    <string name="waiting_for_other_players">Waiting for other players to finish&#8230;</string>
    <string name="looking_for_host">Looking for host&#8230;</string>
    <string name="no_host_found">No host found</string>
    <string name="player_name">Player</string>
    <string name="round_1">1</string>
    <string name="round_2">2</string>
    <string name="round_3">3</string>
    <string name="retry">Retry</string>
    <string name="server_broadcast_restart">This device has been discoverable by other devices for
        120 seconds.\n\nClick \"OK\" to extend for another 120 seconds.
    </string>
    <string name="yes">Yes</string>
    <string name="you_win">Yay!\nYou\'re #1.</string>
    <string name="you_lose">You lose.</string>
    <string name="last">Last</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="place">place</string>
    <string name="womp">Womp.</string>
    <string name="multiplayer_goal1">Play 3 levels,</string>
    <string name="multiplayer_goal2">best time wins!</string>
    <string name="about_body">Tilt is an Android adaptation of the classic handheld maze genre. While the concept of the game is the same, the fun lies in the features introduced by the player’s smartphone. The game lets players accurately navigate a variety of mazes by utilizing the motion sensors of their Android devices. With multiplayer gameplay supported  by a Bluetooth connection, players can make use of an automatic scoring system, leaderboards, and a precise timer for those split second time differences.\n\n
        Created as an open source Android experiment, the app showcases the capabilities of Android devices by highlighting the reliability of their Bluetooth connection and the responsive accuracy of
        their motion sensors.
    </string>
    <string name="no_sensor_found_message">It looks like your device doesn\'t have the required sensors.</string>
    <string name="no_sensor_found_title">We\'re very sorry!</string>
</resources>
