<?xml version="1.0" encoding="utf-8"?>
<com.mediamonks.googleflip.ui.Settings
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right">

    <ImageButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:background="@drawable/settings_button"/>

    <FrameLayout
        android:id="@+id/outside"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_30"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:gravity="right"
        android:orientation="vertical"
        android:paddingBottom="18dp"
        android:paddingTop="18dp"
        android:visibility="gone">

        <temple.core.ui.CustomButton
            android:id="@+id/calibrate_button"
            style="@style/settings_button"
            android:text="@string/calibrate"/>

        <temple.core.ui.CustomButton
            android:id="@+id/mute_button"
            style="@style/settings_button"
            android:text="@string/sound_off"/>

        <temple.core.ui.CustomButton
            android:id="@+id/about_button"
            style="@style/settings_button"
            android:text="@string/about"/>

        <temple.core.ui.CustomButton
            android:id="@+id/licenses_button"
            style="@style/settings_button"
            android:text="@string/licenses"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</com.mediamonks.googleflip.ui.Settings>