<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.mediamonks.googleflip.ui.paging.PageIndicator
            android:id="@+id/page_indicator"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <temple.core.ui.CustomButton
            android:id="@+id/exit_button"
            style="@style/purple_button"
            android:text="@string/exit"/>

        <temple.core.ui.CustomButton
            android:id="@+id/btn_restart"
            style="@style/yellow_button"
            android:text="@string/restart"/>

    </LinearLayout>

    <temple.core.ui.CustomTextView
        android:id="@+id/tv_waiting_for_players"
        style="@style/label_book"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/waiting_for_game_restart"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
</LinearLayout>